Закончена разметка каталога

--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
             <a class="user-navigation-link" href="#">Сравнить</a>
           </li>
           <li class="user-navigation-item user-navigation-basket">
-            <a class="user-navigation-link" href="#">Корзина</a>
+            <a class="user-navigation-link" href="#">
+              Корзина
+              <span class="user-navigation-basket-count">2</span>
+            </a>
           </li>
         </ul>
       </nav>
