--- a/index.html
+++ b/index.html
@@ -25,8 +25,30 @@
               <a class="user-navigation-link" href="#">Сравнить</a>
             </li>
             <li class="user-navigation-item user-navigation-basket">
-              <a class="user-navigation-link" href="#" data-count="2">Корзина
-              </a>
+              <a class="user-navigation-link" href="#" data-count="2">Корзина</a>
+              <div class="basket-popover">
+                <ul class="basket-product-list">
+                  <li class="basket-product-item">
+                    <img class="basket-product-image" src="images/basket/product-1.jpg" width="39" height="43" alt="Любительская селфи-палка.">
+                    <div class="basket-product-title">Любительская селфи-палка</div>
+                    <button class="basket-product-remove">
+                      <span class="visually-hidden">Удалить продукт из корзины.</span>
+                    </button>
+                  </li>
+                  <li class="basket-product-item">
+                    <img class="basket-product-image" src="images/basket/product-2.jpg" width="39" height="43" alt="Профессиональная селфи-палка.">
+                    <div class="basket-product-title">Профессиональная селфи-палка</div>
+                    <button class="basket-product-remove">
+                      <span class="visually-hidden">Удалить продукт из корзины.</span>
+                    </button>
+                  </li>
+                </ul>
+                <div class="basket-total">
+                  <div class="basket-total-count">Товаров: 2</div>
+                  <div class="basket-total-price">Сумма: 2000 ₽</div>
+                </div>
+                <a class="basket-link" href="#">Открыть корзину</a>
+              </div>
             </li>
           </ul>
         </nav>
