--- a/index.html
+++ b/index.html
@@ -29,15 +29,19 @@
               <div class="basket-popover">
                 <ul class="basket-product-list">
                   <li class="basket-product-item">
-                    <img class="basket-product-image" src="images/basket/product-1.jpg" width="39" height="43" alt="Любительская селфи-палка.">
-                    <div class="basket-product-title">Любительская селфи-палка</div>
+                    <a class="basket-product-link" href="#">
+                      <img class="basket-product-image" src="images/basket/product-1.jpg" width="39" height="43" alt="Любительская селфи-палка.">
+                      <span class="basket-product-title">Любительская селфи-палка</span>
+                    </a>
                     <button class="basket-product-remove">
                       <span class="visually-hidden">Удалить продукт из корзины.</span>
                     </button>
                   </li>
                   <li class="basket-product-item">
-                    <img class="basket-product-image" src="images/basket/product-2.jpg" width="39" height="43" alt="Профессиональная селфи-палка.">
-                    <div class="basket-product-title">Профессиональная селфи-палка</div>
+                    <a class="basket-product-link" href="#">
+                      <img class="basket-product-image" src="images/basket/product-2.jpg" width="39" height="43" alt="Профессиональная селфи-палка.">
+                      <span class="basket-product-title">Профессиональная селфи-палка</span>
+                    </a>
                     <button class="basket-product-remove">
                       <span class="visually-hidden">Удалить продукт из корзины.</span>
                     </button>
@@ -167,7 +171,7 @@
             </div>
           </li>
         </ul>
-        <ul class="slider-promo-bullet-iist">
+        <ul class="slider-promo-bullet-list">
           <li class="slider-promo-bullet-items">
             <button class="slider-bullet slider-bullet-active" type="button">
               <span class="visually-hidden">Слайд 1.</span>
@@ -303,8 +307,12 @@
       </section>
     </main>
     <footer class="page-footer">
-      <div class="page-footer-container container ">
-        <img class="footer-logo-image" src="images/logo-footer.svg" alt="Логотип Девайс." width="145" height="36">
+      <div class="page-footer-container container">
+        <div class="footer-logo">
+          <a class="footer-logo-link" href="#">
+            <img class="footer-logo-image" src="images/logo-footer.svg" alt="Логотип Девайс." width="145" height="36">
+          </a>
+        </div>
         <p class="footer-addres">Санкт-Петербург, набережная реки Карповки, 5, литера П</p>
         <nav class="footer-navigation">
           <ul class="footer-navigation-list">
